# bz-python-airgap

./: BUILD.bazel  README.md  WORKSPACE.bazel  hello.py
lib/3rd-party-python/: requirement.txt
