load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "a30abdfc7126d497a7698c29c46ea9901c6392d6ed315171a6df5ce433aa4502",
    strip_prefix = "rules_python-0.6.0",
    urls = [
        "https://github.com/bazelbuild/rules_python/archive/0.6.0.tar.gz",
    ],
)

#http_archive(
#    name = "rules_python",
#    sha256 = "ffc7b877c95413c82bfd5482c017edcf759a6250d8b24e82f41f3c8b8d9e287e",
#    strip_prefix = "rules_python-0.19.0",
#    url = "https://github.com/bazelbuild/rules_python/releases/download/0.19.0/rules_python-0.19.0.tar.gz",
#)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "lib_3rd-party-python",
    extra_pip_args = ["--no-deps"],
    requirements = "//lib:3rd-party-python/requirement.txt",
    quiet = False,
)
